# Parallel

Task_1/: CMakeLists.txt  Makefile  README.txt  Test  Test.cpp  Test_d
Task_2/: Integrate.cpp  Makefile  Matrix_prod.cpp  Simple_Iteration.cpp
Task_3/: Check.cpp  Makefile  Mat_prod.cpp  Server.cpp  answer.txt  answers.txt  server
Task_4/: sensorx.py
Task_5/: Yolo.py
Task_6/: BadCode.cpp  Makefile  c_task.cpp  matrix.txt  task.cpp
Task_7/: CMakeLists.txt  matrix.txt  task.cpp
Task_8/: CMakeLists.txt  README  result_matrix.txt  task.cu
